force-app/main/default/objects/User/fields/ACCT_MGR_NAME__c.field-meta.xml
<CustomField>
    <fullName>ACCT_MGR_NAME__c</fullName>
    <label>Account Manager Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>