force-app/main/default/objects/User/fields/ACCT_MGR_NO__c.field-meta.xml
<CustomField>
    <fullName>ACCT_MGR_NO__c</fullName>
    <label>Account Manager No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>