force-app/main/default/objects/User/fields/agf__Team_Member_Allocation__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Member_Allocation__c</fullName>
    <formula>HYPERLINK(&#39;/apex/adm_teammemberallocation?Id=&#39; +  Id, &#39;view&#39; )</formula>
    <label>Team Member Allocation</label>
    <type>Text</type>
</CustomField>