force-app/main/default/objects/User/fields/Calls_Quota__c.field-meta.xml
<CustomField>
    <fullName>Calls_Quota__c</fullName>
    <description>Outbound Call Quota for Inside Sales</description>
    <label>Calls Quota</label>
    <length>18</length>
    <type>Text</type>
</CustomField>