force-app/main/default/objects/User/fields/DISTRICT_MGR_NAME__c.field-meta.xml
<CustomField>
    <fullName>DISTRICT_MGR_NAME__c</fullName>
    <label>District Manager Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>