force-app/main/default/objects/User/fields/DISTRICT_MGR_NO__c.field-meta.xml
<CustomField>
    <fullName>DISTRICT_MGR_NO__c</fullName>
    <label>District Manager No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>