force-app/main/default/objects/User/fields/District_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>District_Territory_ID__c</fullName>
    <label>District Territory</label>
    <length>5</length>
    <type>Text</type>
</CustomField>