force-app/main/default/objects/User/fields/Inside_Sales_Level__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Level__c</fullName>
    <inlineHelpText>SMB Level I or SMB Level II</inlineHelpText>
    <label>Inside Sales Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMB Level I</fullName>
            </value>
            <value>
                <fullName>SMB Level II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>