force-app/main/default/objects/User/fields/Is_Current_Round_Robin_Selection__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Round_Robin_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Round Robin Selection</label>
    <type>Checkbox</type>
</CustomField>