force-app/main/default/objects/User/fields/Is_Round_Robin_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Round_Robin_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Round Robin Active</label>
    <type>Checkbox</type>
</CustomField>