force-app/main/default/objects/User/fields/Manager_Active__c.field-meta.xml
<CustomField>
    <fullName>Manager_Active__c</fullName>
    <formula>Manager.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager: Active</label>
    <type>Checkbox</type>
</CustomField>