force-app/main/default/objects/User/fields/Opportunity_Quota__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Quota__c</fullName>
    <description>Total Quota for the Opportunity</description>
    <label>Opportunity Quota</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>