force-app/main/default/objects/User/fields/Outside_Sales_ID__c.field-meta.xml
<CustomField>
    <fullName>Outside_Sales_ID__c</fullName>
    <externalId>true</externalId>
    <label>Outside Sales ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>