force-app/main/default/objects/User/fields/Quarterly_Sales_Goal__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Sales_Goal__c</fullName>
    <label>Quarterly Revenue Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>