force-app/main/default/objects/User/fields/Region_Name_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Region_Name_for_Reporting__c</fullName>
    <label>Region Name for Reporting</label>
    <length>20</length>
    <type>Text</type>
</CustomField>