force-app/main/default/objects/User/fields/SEARCH_TERM1__c.field-meta.xml
<CustomField>
    <fullName>SEARCH_TERM1__c</fullName>
    <label>SEARCH_TERM1</label>
    <length>12</length>
    <type>Text</type>
</CustomField>