force-app/main/default/objects/User/fields/Sears_Enterprise_id__c.field-meta.xml
<CustomField>
    <fullName>Sears_Enterprise_id__c</fullName>
    <externalId>true</externalId>
    <label>Sears_Enterprise_id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>