force-app/main/default/objects/User/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <description>Manual field to show users tenure on a report requested</description>
    <label>Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>