force-app/main/default/objects/User/fields/Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID__c</fullName>
    <label>Territory</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>