force-app/main/default/objects/User/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <label>Territory Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>