force-app/main/default/objects/User/fields/Time_Zone_Preference__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Preference__c</fullName>
    <label>Time Zone Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Prompt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>