force-app/main/default/objects/User/fields/Upper_Name__c.field-meta.xml
<CustomField>
    <fullName>Upper_Name__c</fullName>
    <formula>UPPER(FirstName&amp;&#39; &#39;&amp;LastName)</formula>
    <label>Upper Name</label>
    <type>Text</type>
</CustomField>