force-app/main/default/objects/User/fields/Yearly_Revenue_Goal__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Revenue_Goal__c</fullName>
    <formula>Quarterly_Sales_Goal__c *4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Revenue Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>