force-app/main/default/objects/User/validationRules/Title_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Title_Field</fullName>
    <active>true</active>
    <description>Only the Administrator can change a title on a the User Record</description>
    <errorConditionFormula>AND( ISCHANGED( Title ) , $UserRole.Name &lt;&gt; &quot;Sears Administrator&quot;)</errorConditionFormula>
    <errorDisplayField>Title</errorDisplayField>
    <errorMessage>Please contact your System Administrator to change your Title.</errorMessage>
</ValidationRule>