force-app/main/default/objects/User/listViews/A_E.listView-meta.xml
<ListView>
    <fullName>A_E</fullName>
    <booleanFilter>(1 AND 2) or 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.DIVISION</field>
        <operation>equals</operation>
        <value>A&amp;E</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Rajiv,lamar</value>
    </filters>
    <label>A&amp;E</label>
</ListView>