force-app/main/default/objects/User/listViews/Active_Users.listView-meta.xml
<ListView>
    <fullName>Active_Users</fullName>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>IS_FROZEN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users</label>
    <language>en_US</language>
    <sharedTo>
        <group>SystemAdministrators</group>
    </sharedTo>
</ListView>