force-app/main/default/objects/User/listViews/Non_Account_Managers.listView-meta.xml
<ListView>
    <fullName>Non_Account_Managers</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>Outside_Sales_ID__c</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.TITLE</field>
        <operation>notContain</operation>
        <value>account,district</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Non-Account Managers</label>
</ListView>